--- a/Monitor/MainWindow.xaml
+++ b/Monitor/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="JettyMonitor.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="JettyMonitor.MainWindow"
         Title="Jetty 监控工具" Height="800" Width="1280" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" ContentRendered="Window_ContentRendered">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,17 +32,19 @@
         <TextBox x:Name="txtLocalPort" Grid.Column="1" Margin="5,5,969,5" TextWrapping="Wrap" VerticalAlignment="Center" Padding="0" Height="30" VerticalContentAlignment="Center" Grid.Row="3"/>
         <Label x:Name="labRemotePort" Content="远程端口" Margin="164,5,854,5" Grid.Row="3" VerticalAlignment="Center" HorizontalContentAlignment="Right" Grid.Column="1" Height="26"/>
         <TextBox x:Name="txtRemotePort" Grid.Column="1" Margin="253,5,702,5" TextWrapping="Wrap" VerticalAlignment="Center" Padding="0" Height="30" VerticalContentAlignment="Center" Grid.Row="3"/>
-        <TextBlock x:Name="txtCommand" HorizontalAlignment="Left" Margin="10,5,0,6" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Height="104" Width="1175" Grid.Column="1" Padding="5" ScrollViewer.CanContentScroll="True" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtCommand" HorizontalAlignment="Left" Margin="5,5,0,6" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Height="104" Width="1185" Grid.Column="1" Padding="5" ScrollViewer.CanContentScroll="True" Grid.ColumnSpan="2" AcceptsReturn="True"/>
         <Label x:Name="labCommand" Content="配置命令行" Margin="5,5,5,86" Grid.Row="4" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center"/>
         <Button x:Name="btnSave" Content="保存配置" HorizontalAlignment="Left" Margin="457,5,0,5" Grid.Row="3" VerticalAlignment="Center" Width="75" Grid.Column="1" Height="30" Click="btnSave_Click"/>
         <Button x:Name="btnStart" Content="启动Jetty" HorizontalAlignment="Left" Margin="550,5,0,5" Grid.Row="3" VerticalAlignment="Center" Width="75" Grid.Column="1" Height="30" Click="btnStart_Click"/>
         <Button x:Name="btnStop" Content="停止Jetty" HorizontalAlignment="Left" Margin="643,5,0,5" Grid.Row="3" VerticalAlignment="Center" Width="75" Grid.Column="1" Height="30" Click="btnStop_Click"/>
         <Label x:Name="labResult" Content="执行结果" Margin="5,5,5,443" Grid.Row="5" VerticalAlignment="Center" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center"/>
-        <TextBlock x:Name="txtResult" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="453" Width="1175" Grid.ColumnSpan="2" ScrollViewer.CanContentScroll="True"/>
         <Label x:Name="labMessage" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="737,5,0,5" Grid.Row="3" VerticalAlignment="Center" Width="448" Height="30" Grid.ColumnSpan="2"/>
         <Button x:Name="btnCopyCommand" Content="复制" Margin="5,39,5,0" Grid.Row="4" VerticalAlignment="Top" Height="30" Click="btnCopyCommand_Click"/>
         <Button x:Name="btnClearCommand" Content="清空" Margin="5,77,5,0" Grid.Row="4" VerticalAlignment="Top" Height="30" Click="btnClearCommand_Click"/>
-        <Button x:Name="btnCopyResult" Content="复制" Margin="5,39,5,0" Grid.Row="5" VerticalAlignment="Top" Height="30" Click="btnCopyResult_Click" />
-        <Button x:Name="btnClearResult" Content="清空" Margin="5,74,5,0" Grid.Row="5" VerticalAlignment="Top" Height="30" Click="btnClearResult_Click" />
+        <Button x:Name="btnCopyResult" Content="复制" Margin="5,40,5,0" Grid.Row="5" VerticalAlignment="Top" Height="30" Click="btnCopyResult_Click" />
+        <Button x:Name="btnClearResult" Content="清空" Margin="5,75,5,0" Grid.Row="5" VerticalAlignment="Top" Height="30" Click="btnClearResult_Click" />
+        <ScrollViewer Grid.Column="1" HorizontalAlignment="Left" Height="483" Margin="5,0,0,0" Grid.Row="5" VerticalAlignment="Top" Width="1185" Grid.ColumnSpan="2">
+            <TextBlock x:Name="txtResult" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Height="483" Width="1185" ScrollViewer.CanContentScroll="True"/>
+        </ScrollViewer>
     </Grid>
 </Window>
