--- a/Monitor/MainWindow.xaml
+++ b/Monitor/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="JettyMonitor.MainWindow"
-        Title="Jetty 监控工具" Height="800" Width="1280" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered" SizeChanged="Window_SizeChanged" Loaded="Window_Loaded" Closing="Window_Closing" Initialized="Window_Initialized" ResizeMode="CanMinimize" Icon="logo.ico">
+        Title="Jetty 监控工具" Height="800" Width="1280" WindowStartupLocation="CenterScreen" ContentRendered="Window_ContentRendered" Closing="Window_Closing" Initialized="Window_Initialized" ResizeMode="CanMinimize" Icon="logo.ico">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="79*"/>
